# autocommit

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs
src/commands/: config.rs  mod.rs
src/commands/commit/: chat_context.rs  generate.rs  mod.rs  prompt.rs  push.rs  stage.rs
src/commands/config/: autocommit_config.rs  config_data.rs  config_service.rs  mod.rs
src/commands/config/config_keys/: config_item.rs  default_behavior.rs  default_language.rs  mod.rs  option_string.rs
src/git/: commit_table.rs  mod.rs  tests.rs
src/i18n/: language.rs  mod.rs
src/utils/: chroma.rs  git.rs  is_unicode_supported.rs  logger.rs  mod.rs  openai.rs  prompts.rs  spinner.rs
