[package]
name = "autocommit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
atty = "0.2.14"
colored = "2.0.0"
derive_builder = "0.12.0"
dirs = "5.0.0"
dotenv = "0.15.0"
futures = "0.3.28"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
dialoguer = "0.10.4"
crossbeam = "0.8.2"
