[package]
name = "autocommit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
atty = "0.2.14"
colored = "2.0.0"
derive_builder = "0.12.0"
dirs = "5.0.0"
futures = "0.3.28"
regex = "1.8.1"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
dialoguer = "0.10.4"
lazy_static = "1.4.0"
indicatif = "0.17.3"
log = "0.4.17"
strum = { version = "0.24", features = ["derive"] }
env_logger = "0.10.0"
prettytable-rs = "0.10.0"
git2 = "0.17.1"

[dev-dependencies]
tempfile = "3.5.0"
